--- a/final.ipynb
+++ b/final.ipynb
@@ -2,19 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "haaaa..\n"
+      "haaaa..\n",
+      "22\n",
+      "final\n"
      ]
     }
    ],
    "source": [
-    "print('haaaa..')"
+    "print('haaaa..')\n",
+    "n = 22\n",
+    "print(n)\n",
+    "print('final')"
    ]
   }
  ],
