--- a/final.ipynb
+++ b/final.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,8 @@
      "text": [
       "haaaa..\n",
       "22\n",
-      "final\n"
+      "final\n",
+      "so tired\n"
      ]
     }
    ],
@@ -19,7 +20,9 @@
     "print('haaaa..')\n",
     "n = 22\n",
     "print(n)\n",
-    "print('final')"
+    "print('final')\n",
+    "w = \"so tired\"\n",
+    "print(w)"
    ]
   }
  ],
